# 02476-mlops

./: Makefile  README.md  data.dvc  pyproject.toml  requirements.txt  test.py
.dvc/: config
.github/workflows/: codecheck.yml  test-linux.yml  test-mac.yml  test-windows.yml  tests.yml
02476-mlops/: __init__.py
dockerfiles/: predict.dockerfile  trainer.dockerfile  wandb.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops_02476/: __init__.py  _version.py  my_logger.py  predict_model.py  sweep.yaml  train_model.py
mlops_02476/data/: load_dataset.py  make_dataset.py
mlops_02476/models/: __init__.py  model.py
mlops_02476/visualizations/: visualize.py
mlops_02476/wandb/: latest-run
models/: model_20240103144234.pt  model_20240104141127.pt  model_20240105152929.pt  model_20240105153443.pt  model_20240105153604.pt  model_20240105160134.pt  model_20240105160151.pt  model_20240105160207.pt  model_20240105160222.pt  model_20240105160243.pt  model_20240105160305.pt  model_20240105160326.pt  model_20240105160347.pt  model_20240105160408.pt  model_20240105160429.pt  model_20240105160450.pt  model_20240105160510.pt  model_20240105160531.pt  model_20240105160552.pt  model_20240105160613.pt
tests/: test_data.py  test_model.py
wandb/: latest-run
wandb/run-20240105_152922-gbqoweab/: run-gbqoweab.wandb
wandb/run-20240105_153436-dc752dm7/: run-dc752dm7.wandb
wandb/run-20240105_153558-6nph545h/: run-6nph545h.wandb
wandb/run-20240105_160128-ti5nwvpe/: run-ti5nwvpe.wandb
wandb/run-20240105_160145-0foil1cf/: run-0foil1cf.wandb
(+106 files in other folders)
